scenarios/03-multi-listener/https-tls-catch-all-multi-tls-ports/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-tls-multi-tls-port-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: https-tls-multi-tls-port-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-50051
      protocol: TLS
      port: 50051
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-9443
      protocol: TLS
      port: 9443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
